[🚧] Refactor httpRequestMNAGER